//
// Protocol buffers definition
//
syntax = "proto3";
package pt.tecnico.bank.server.grpc;


message Transaction {
  int32 amount = 1;
  string sender_username = 2;
  string receiver_username = 3;
  bytes sender_key = 4;
  bytes receiver_key = 5;
  int32 wid = 6;
  bool sent = 7;
  bytes signature = 8;
}

message AdebProof {
  bytes public_key = 1;
  string message = 2;
  int32 wid = 3;
  bytes signature = 4;
}

message OpenAccountRequest {
  string username = 1;
  int32 init_wid = 2;
  int32 init_balance = 3;
  bytes pair_signature = 4; // (wid, balance)*
  bytes public_key = 5;
  bytes signature = 6;
}

message OpenAccountResponse {
  string username = 1;
  bytes public_key = 2;
  bytes signature = 3;
}


message SendAmountRequest {
  Transaction transaction = 1;
  int64 nonce = 2;
  int64 timestamp = 3;

  // regular
  int32 balance = 4; // b = b - amount
  bytes pair_signature = 5; // just for server to save

  bytes signature = 6;
}

message SendAmountResponse {
  bytes public_key = 1;
  int64 nonce = 2;

  int32 wid = 3;

  bytes signature = 5;
}


message CheckAccountRequest {
  bytes client_key = 1;
  bytes check_key = 2;
  int64 nonce = 3;
  int64 timestamp = 4;

  int32 rid = 5;

  bytes signature = 6;
}

message CheckAccountResponse {
  repeated Transaction pending_transactions = 1;
  int64 nonce = 2;

  repeated AdebProof adebProofs = 3;

  int32 rid = 4;

  int32 balance = 5;
  int32 wid = 6;
  bytes pair_signature = 7;

  bytes signature = 8;
}


message ReceiveAmountRequest {
  repeated Transaction pending_transactions = 1;
  bytes public_key = 2;
  int64 nonce = 3;
  int64 timestamp = 4;

  int32 wid = 5;
  int32 balance = 6; // b = b + amount
  bytes pair_signature = 7; // just for server to save

  bytes signature = 8;
}

message ReceiveAmountResponse {
  bytes public_key = 1;
  int64 nonce = 2;

  int32 wid = 3;

  bytes signature = 5;
}


message AuditRequest {
  bytes client_key = 1;
  bytes audit_key = 2;
  int64 nonce = 3;
  int64 timestamp = 4;

  map<string, int64> pows = 5;  // <sName, pow>

  int32 rid = 7;

  bytes signature = 8;
}

message AuditResponse {
  repeated Transaction transactions = 1;
  int64 nonce = 2;

  repeated AdebProof adebProofs = 3;

  int32 rid = 4;

  bytes signature = 5;
}

message CheckAccountWriteBackRequest {
  bytes client_key = 1;
  bytes check_key = 2;
  int64 nonce = 3;
  int64 timestamp = 4;

  repeated Transaction pending_transactions = 5;

  int32 balance = 6;
  int32 wid = 7;
  bytes pairSign = 8;

  bytes signature = 9;
}

message CheckAccountWriteBackResponse {
  bytes public_key = 1;
  int64 nonce = 2;
  bytes signature = 3;
}

message AuditWriteBackRequest {
  bytes client_key = 1;
  bytes audit_key = 2;
  int64 nonce = 3;
  int64 timestamp = 4;

  repeated Transaction transactions = 5;

  bytes signature = 6;
}

message AuditWriteBackResponse {
  bytes public_key = 1;
  int64 nonce = 2;
  bytes signature = 3;
}

message ProofOfWorkRequest {
  bytes public_key = 1;
  int64 nonce = 2;
  int64 timestamp = 3;
  bytes signature = 4;
}

message ProofOfWorkResponse {
  bytes public_key = 1;
  int64 nonce = 2;
  string server_name = 3;

  bytes challenge = 4;

  bytes signature = 5;
}

message RidRequest {
  bytes public_key = 1;
  int64 nonce = 2;
  int64 timestamp = 3;
  bytes signature = 4;
}

message RidResponse {
  bytes public_key = 1;
  int64 nonce = 2;
  int32 rid = 3;
  bytes signature = 4;
}


message ErrorResponse {
  string errorMsg = 1;
  int64 nonce = 2;
  bytes signature = 3;
}

service ServerService {

  rpc openAccount(OpenAccountRequest) returns (OpenAccountResponse);
  rpc sendAmount(SendAmountRequest) returns (SendAmountResponse);
  rpc checkAccount(CheckAccountRequest) returns (CheckAccountResponse);
  rpc receiveAmount(ReceiveAmountRequest) returns (ReceiveAmountResponse);
  rpc audit(AuditRequest) returns (AuditResponse);

  rpc pow(ProofOfWorkRequest) returns (ProofOfWorkResponse);

  rpc checkAccountWriteBack(CheckAccountWriteBackRequest) returns (CheckAccountWriteBackResponse);
  rpc auditWriteBack(AuditWriteBackRequest) returns (AuditWriteBackResponse);

  rpc getRid(RidRequest) returns (RidResponse);
}